mType/tests/testFiles/import/error/importMissingExtension.mt
// Test: No .mt extension
import { SomeClass } from "./modules/SomeModule"

var obj = SomeClass();
